PMD hints (unused imports, fields), removed ImportDirectory (#89124)